- DownloadQueue.schedule(..., first) + multithreaded loading + better ordering